--- a/src/components/BrewDetails.module.css
+++ b/src/components/BrewDetails.module.css
@@ -20,7 +20,12 @@
   font-weight: inherit;
 }
 
-.title:hover,
+@media (hover: hover) {
+  .title:hover {
+    background-color: var(--brown-3);
+  }
+}
+
 .title:active {
   background-color: var(--brown-3);
 }
