--- a/src/components/InstallPwaButton.module.css
+++ b/src/components/InstallPwaButton.module.css
@@ -8,7 +8,12 @@
   padding: 0.5rem 0.75rem;
 }
 
-.button:hover,
+@media (hover: hover) {
+  .button:hover {
+    background-color: var(--accent-2);
+  }
+}
+
 .button:active {
   background-color: var(--accent-2);
 }
